# c-c-linux-LearningCode

./: .gitignore  readme.md
1.1.1红黑树/: main.cpp
1.1.2b树/: btree.cpp
1.3.1 智能指针-move-forward-左右值引用/src1-cmake/: 1-1-error-example.cpp  1-2-shared_ptr-app.cpp  1-3-1-delete.cpp  1-3-2-cycle-shared-ptr.cpp  2-1-mystring.cpp  2-2-3-1-r-move.cpp  2-3-1-memory.cpp  2-3-1-memory2.cpp  2-3-1-memory3.cpp  2-3-3-forward1.cpp  3-lambda.cpp  4-unordered_map.cpp  CMakeLists.txt  time_interval.h  编译说明.txt
1.3.1智能指针-move-forward-左右值引用/src1-cmake/: 1-3-1-reset-count.cpp  1-3-2-shared_from_this.cpp  1-3-2-shared_from_this2.cpp  1-4-unique_ptr-deleter.cpp  1-4-unique_ptr.cpp  1-5-1-weak_ptr.cpp  1-5-4-misuse-weak_ptr.cpp  2-1-lr_value.cpp  2-2-3-2-r-move.cpp  2-3-2-move.cpp  2-3-3-forward2.cpp  2-3-4-emplace_back.cpp  2-3-4-emplace_back2.cpp  4-priority_queue.cpp
1.3.2C++11多线程thread-互斥量-条件变量-原子变量/: 1-2-4-lock.cpp  1-2-4-unique_lock.cpp  1-2-mutex1.cpp  1-2-mutex2-dead-lock.cpp  1-2-recursive_mutex1.cpp  1-2-shared_ptr-mutex-notify.cpp  1-2-timed_mutex.cpp  1-3-condition-sync-queue.cpp  1-3-condition-sync-queue2.cpp  1-4-atomic.cpp  1-5-call_once.cpp  1-5-future.cpp  1-5-package_task.cpp  1-5-promise.cpp  1-thread.cpp  1-thread1-simple.cpp  1-thread2-pack.cpp  2-1-function.cpp  2-2-bind.cpp  3-1-variable-parameter.cpp  3-1-variable-parameter2.cpp  3-1-variable-parameter3.cpp  3-1-variable-parameter4.cpp  4-threadpool.cpp  5-1-exception.cpp  5-3-exception.cpp  5-5-exception_ptr.cpp  5-5-make_exception_ptr.cpp  5-5-nested_exception.cpp  CMakeLists.txt  simple_sync_queue.h  sync_queue.h  sync_queue2.h  zero_thread.cpp  zero_thread.h  zero_threadpool.cpp  zero_threadpool.h  说明.txt
2.1.1select poll epoll/: epoll_initial.c  poll.cpp  select.cpp
2.1.2reactor/: epoll_reactor_mulcb.c  epoll_reactor_singecb.c
2.1.3http/: httpserver.c
2.1.4websocket/: websocket_reactor.c
2.2.1C1000K/: C1000Kclient.c  C1000Kserver.c
2.3.1NtyCo/: Makefile
2.3.1NtyCo/core/: nty_coroutine.c  nty_coroutine.h  nty_epoll.c  nty_queue.h  nty_schedule.c  nty_socket.c  nty_tree.h
2.3.1NtyCo/sample/: mul_port_client_epoll.c  nty_client.c  nty_server.c
2.4.1udp icmp arp/: udp_icmp_arp.c
3.1.1线程池threadpoll/: threadpoll.c
3.1.2内存池mempoll/: mempoll.c
3.1.3异步请求池asyncpoll/: async_dns_client_noblock.c  sync_dns_client.c
3.1.4连接池connpoll/: CMakeLists.txt  DBPool.cpp  DBpool.h  IMUser.cpp  IMUser.h  README.md  ZeroThreadpool.cpp  ZeroThreadpool.h  test_curd.cpp  test_dbpool.cpp
3.2.1原子操作与锁/: lock.c
3.2.2try-catch/: try-catch.c
3.2.3定时器红黑树最小堆跳表时间轮/: mh-timer.c  mh-timer.h  minheap.c  minheap.h  rbt-timer.c  rbt-timer.h  rbtree.c  rbtree.h  readme.md  single_tw.c  skiplist.c  skiplist.h  skl-timer.c  spinlock.h  timewheel.c  timewheel.h  tw-timer.c
3.2.4无锁队列freequeue/: 1_test_i++.c  2_test_i++_threads.c  3_test_mutex_spin_lock.cpp  4_test_lock_free_queue.cpp  ArrayLockFreeQueue.h  ArrayLockFreeQueueImp.h  CMakeLists.txt  SimpleLockFreeQueue.h  atom_opt.h  atomic_ptr.hpp  readme.md  ypipe.hpp  yqueue.hpp
3.2.5死锁检测组件/: deadlock_success.c  readme.md
3.2.6内存泄漏检测组件/: first.c  mtrace.c  readme.md  second.c  three.c
3.3.1libevent-demo/libev/: main-ev.c  main-event.c
3.3.1libevent-demo/libevent/: evmain1.c  evmain2.c
3.3.2protobuf/2-protobuf/1-im/: IM.BaseDefine.proto  IM.Login.proto  ImPduBase.h  bad.cpp  client.cc  helloworld.proto  pack_test.cpp  rpc_client.cpp  rpc_server.cpp  server.cc  util.cc
3.3.2protobuf/2-protobuf/2-im_new/: IM.BaseDefine.proto  IM.Login.proto  IM.Message.proto  client.cc  msg.proto  server.cc  util.h
3.3.2protobuf/2-protobuf/3-person/: CMakeLists.txt  IM.BaseDefine.pb.cc  IM.BaseDefine.pb.h  IM.Login.pb.cc  IM.Login.pb.h  code_test  code_test.cpp  pb_speed.cpp
3.3.2protobuf/2-protobuf/3-person/proto/: IM.BaseDefine.proto  IM.Login.proto
3.3.2protobuf/2-protobuf/4-addressbook/: add_person  add_person.cc  addressbook.pb.cc  addressbook.pb.h  addressbook.proto  book  core  list_people  list_people.cc
3.3.2protobuf/2-protobuf/5-codec/: CMakeLists.txt  Codec.pb.cc  Codec.pb.h  Codec.proto  code_test.cpp
文件服务器项目/day1fastdfs/: fdfs_upload_file.c  fdfs_upload_file.h  main.c
文件服务器项目/day2redis/: myredis.c
文件服务器项目/day3nginx/: Nginx配置说明.doc
文件服务器项目/day3nginx/SwitchHosts/: configs.json
文件服务器项目/day3nginx/SwitchHosts/hosts/: 0.hosts  0.hosts.backup_switchhosts  1.hosts.backup_switchhosts  COMMON.hosts
文件服务器项目/day6数据库以及接口设计/: gopher.sql  nginx.conf  readme.md
